# chocolate_chocolate_chip

./: Cargo.toml  Makefile  README.md
scripts/: default_compile.sh  startup.sh
src/: main.rs
src/client/: app.js  index.html
src/firmware/: top_tb.vhd
src/software/: main.rs
src/software/client/: app.js  style.css
