[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1"
hyper = { version = "1", features = ["full"] }
http-body = "1"
http-body-util = "0.1"
hyper-util = {version = "0.1", features = ["full"]}
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}

